<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    tools:context=".Register">

    <TextView
        android:text="@string/register"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="399dp"
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="399dp"
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20sp"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="20sp"/>
    <TextView
        android:id="@+id/login_btn"
        android:text="@string/click_here_to_login"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>